--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
 	justify-content: center;
 	padding: 20px;
 }
+
 .project_main_headline {
 	display: flex;
 	align-items: center;
@@ -31,15 +32,22 @@
 
 .card {
 	width: 250px;
-	height: 290px;
+	height: 310px;
 	margin: 5px;
 }
 .card > .card-body > a {
 	margin-top: 12px;
 }
 .card:hover {
-	box-shadow: 0px 1px 5px 5px lightgray;
+	box-shadow: 0px 1px 5px 2px lightgray;
 }
-/* .card-body {
-	background-color: #b1b1b1;
-} */
+.card-body {
+	padding-top: 0.5rem;
+}
+
+#contribution {
+	background: #8ab4f8 !important;
+}
+#solo {
+	background: #fdd663 !important;
+}
