--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@
 	color: black;
 }
 #about_card {
-	flex-direction: row !important;
+/* 	flex-direction: row !important; */
 	height: 13rem !important;
 }
 #about_card_ {
