--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 	background-color: var(--background);
 	color: var(--text);
 	font-family: "JetBrains Mono";
+	margin-bottom: 2rem;
 }
 a {
 	color: var(--accent);
@@ -42,14 +43,35 @@ a {
 }
 .main4 {
 	display: flex;
-	flex-direction: column;
 }
+.main3 > h1,
+.main3 > ul {
+	margin: 0;
+	margin-top: 0.25rem;
+	margin-bottom: 0.5rem;
+}
+
 .list_el {
 	font-style: italic;
 }
 .margin {
 	margin: 1rem;
 }
-main5 {
+.main5 {
 	display: flex;
+}
+.p_ {
+	margin: 0;
+}
+@media only screen and (max-width: 1000px) {
+	.main4 {
+		flex-direction: column;
+		margin-bottom: 1rem;
+	}
+	.main5 {
+		flex-direction: column;
+	}
+	.main5 > span {
+		margin: 0.25rem;
+	}
 }
